<?xml version="1.0"?>
<package>
  <name>ros_base</name>
  <version>0.0.0</version>
  <description>a base skeleton to be used for implementing new nodes</description>
  <maintainer email="gianluca.bardaro@polimi.it">Gianluca Bardaro</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>state_machine_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>state_machine_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
